--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "apollo-server-express": "^2.11.0",
     "axios": "^0.19.2",
     "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.0",
+    "bootstrap": "^4.4.1",
     "connect-mongo": "^3.2.0",
     "css-loader": "^3.4.2",
     "express": "^4.14.0",
@@ -40,6 +41,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-dev-middleware": "^3.7.2"
